...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserProfileFragment"
    android:id="@+id/userProfileFragmentLayout">

    <ImageView
        android:id="@+id/ivUserProfileBackground"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserProfileTotalRunningTime" />

    <Button
        android:id="@+id/btnUserProfileFindUser"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Dodaj znajomych"
        android:textStyle="bold"
...
